enhance uniqueness of fields and add user edition

--- a/templates/common/step_progressbar.html
+++ b/templates/common/step_progressbar.html
@@ -1,6 +1,6 @@
 <div class="fr-container">
     <div class="fr-grid-row">
-        <div class="fr-col-12 fr-mt-5w">
+        <div class="fr-col-12 fr-my-5w">
 
             <div class="container-progressbar">
                 <ul id="step_progressbar" class="progressbar">
