--- a/templates/conventions/annexes.html
+++ b/templates/conventions/annexes.html
@@ -23,7 +23,7 @@
                     name="{{form.uuid.html_name}}"
                     value="{{ form.uuid.value|default_if_none:'' }}">
                 <div class="fr-grid-row fr-grid-row--gutters">
-                    <div class="fr-col-md-12 fr-mt-5w">
+                    <div class="fr-col-md-12">
 
                         <div role="alert" class="fr-alert fr-alert--info fr-mb-3w">
                             <p>Attention, les annexes concernées sont ici les jardins, les caves et les terrasses</p>
