--- a/templates/conventions/financement.html
+++ b/templates/conventions/financement.html
@@ -21,7 +21,7 @@
                     name="{{form.uuid.html_name}}"
                     value="{{ form.uuid.value|default_if_none:'' }}">
                 <div class="fr-grid-row fr-grid-row--gutters">
-                    <div class="fr-col-md-12 fr-mt-5w">
+                    <div class="fr-col-md-12">
                         <!-- <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Financements</h2> -->
 
                         <h4>Financement : Prêts & Subventions</h4>
