--- a/templates/conventions/programme.html
+++ b/templates/conventions/programme.html
@@ -16,7 +16,7 @@
             <form method="post" action="">
                 {% csrf_token %}
                 <div class="fr-grid-row fr-grid-row--gutters">
-                    <div class="fr-col-md-12 fr-mt-5w">
+                    <div class="fr-col-md-12">
                         <!-- <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Nature du programme immobilier</h2> -->
 
                         <h4>Adresse du programme</h4>
