--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -22,7 +22,7 @@
             <div class="fr-container">
                 {% csrf_token %}
                 <div class="fr-grid-row fr-grid-row--gutters">
-                    <div class="fr-col-md-12 fr-my-5w">
+                    <div class="fr-col-md-12 fr-mb-5w">
                         {% if not convention.is_submitted %}
                             <div role="alert" class="fr-alert fr-alert--error fr-mb-3w">
                                 <p class="fr-alert__title">Attention</p>
