--- a/templates/conventions/selection.html
+++ b/templates/conventions/selection.html
@@ -16,7 +16,7 @@
             <form method="post" action="{% if redirect_action %}{{ redirect_action }}{% endif %}">
                 {% csrf_token %}
                 <div class="fr-grid-row fr-grid-row--gutters">
-                    <div class="fr-col-md-12 fr-mt-5w">
+                    <div class="fr-col-md-12">
                         <div class="fr-mb-3w fr-form-group">
                             <fieldset class="fr-fieldset">
                                 <div class="fr-fieldset__content">
