--- a/templates/conventions/stationnements.html
+++ b/templates/conventions/stationnements.html
@@ -16,7 +16,7 @@
             <form method="post" action="" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="fr-grid-row fr-grid-row--gutters">
-                    <div class="fr-col-md-12 fr-mt-5w">
+                    <div class="fr-col-md-12">
 
                         <h4>Liste des stationnements associés au lot conventionné</h4>
 
