--- a/templates/settings/administrations.html
+++ b/templates/settings/administrations.html
@@ -38,7 +38,7 @@
                                         <td>{{ administration.code }}</td>
                                         <td>{{ administration.ville_signature }}</td>
                                         <td>
-                                            <a class="fr-link fr-mb-1w" href="{% url 'settings:administration' administration_uuid=administration.uuid %}" >
+                                            <a class="fr-link fr-mb-1w" href="{% url 'settings:edit_administration' administration_uuid=administration.uuid %}" >
                                                 <span class="fr-fi-edit-line" aria-hidden="true"></span>
                                             </a>
                                         </td>
