--- a/templates/settings/edit_bailleur.html
+++ b/templates/settings/edit_bailleur.html
@@ -9,16 +9,17 @@
         <div class="fr-container">
             <div class="fr-grid-row fr-grid-row--gutters fr-py-5w">
                 <div class='fr-col-12 fr-col-md-4 fr-col-lg-3'>
-                    {% include 'settings/common/side_menu.html' with active_menu='administrations' %}
+                    {% include 'settings/common/side_menu.html' with active_menu='bailleurs' %}
                 </div>
                 <div class='fr-col-12 fr-col-md-8 fr-col-lg-9 fr-pl-md-3w'>
                     <div class='fr-col-12'>
-                        <h3>Modification de l'administration ‹‹{{ form.nom.value }}››</h3>
+                        <h3>Modification du bailleur ‹‹{{ form.nom.value }}››</h3>
+                        <div role="warning" class="fr-alert fr-alert--warning fr-mb-3w">
+                            <p>Les modifications que vous apportez à votre bailleur seront appliquées à toutes les conventions qui ne sont pas encore validées</p>
+                        </div>
                         <form method="post" action="">
                             {% csrf_token %}
-                            {% include "common/form/input_text.html" with form_input=form.nom label="Nom de l'administration" %}
-                            {% include "common/form/input_text.html" with form_input=form.code label="Code de l'administration" %}
-                            {% include "common/form/input_text.html" with form_input=form.ville_signature label="Ville de signature de la convention" %}
+                            {% include 'bailleurs/form_content.html' %}
 
                             <button class="fr-btn fr-fi-save-line fr-btn--icon-left" type="submit">
                                 Enregistrer
