--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -30,7 +30,7 @@
                     name="{{form.uuid.html_name}}"
                     value="{{ form.uuid.value|default_if_none:'' }}">
                 <div class="fr-grid-row fr-grid-row--gutters">
-                    <div class="fr-col-md-12 fr-mt-5w">
+                    <div class="fr-col-md-12">
                         <!-- <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Informations cadastrales sur le programme</h2> -->
 
                         <h4>Permis et dates</h4>
