--- a/templates/conventions/logements.html
+++ b/templates/conventions/logements.html
@@ -16,7 +16,7 @@
             <form method="post" action="" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="fr-grid-row fr-grid-row--gutters">
-                    <div class="fr-col-md-12 fr-mt-5w">
+                    <div class="fr-col-md-12">
                         <!-- <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Détails des logements</h2> -->
 
                         <h4>Logements associés à la convention</h4>
