--- a/templates/settings/bailleurs.html
+++ b/templates/settings/bailleurs.html
@@ -27,6 +27,7 @@
                                     <th scope="col">
                                         Ville
                                     </th>
+                                    <th scope="col"></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -35,6 +36,11 @@
                                         <td>{{ bailleur.nom }}</td>
                                         <td>{{ bailleur.siret }}</td>
                                         <td>{{ bailleur.ville }}</td>
+                                        <td>
+                                            <a class="fr-link fr-mb-1w" href="{% url 'settings:edit_bailleur' bailleur_uuid=bailleur.uuid %}" >
+                                                <span class="fr-fi-edit-line" aria-hidden="true"></span>
+                                            </a>
+                                        </td>
                                     </tr>
                                 {% endfor %}
                             </tbody>
