--- a/templates/settings/edit_user.html
+++ b/templates/settings/edit_user.html
@@ -9,16 +9,17 @@
         <div class="fr-container">
             <div class="fr-grid-row fr-grid-row--gutters fr-py-5w">
                 <div class='fr-col-12 fr-col-md-4 fr-col-lg-3'>
-                    {% include 'settings/common/side_menu.html' with active_menu='administrations' %}
+                    {% include 'settings/common/side_menu.html' with active_menu='users' %}
                 </div>
                 <div class='fr-col-12 fr-col-md-8 fr-col-lg-9 fr-pl-md-3w'>
                     <div class='fr-col-12'>
-                        <h3>Modification de l'administration ‹‹{{ form.nom.value }}››</h3>
+                        <h3>Modification de l'utilisateur ‹‹{{ form.username.value }}››</h3>
                         <form method="post" action="">
                             {% csrf_token %}
-                            {% include "common/form/input_text.html" with form_input=form.nom label="Nom de l'administration" %}
-                            {% include "common/form/input_text.html" with form_input=form.code label="Code de l'administration" %}
-                            {% include "common/form/input_text.html" with form_input=form.ville_signature label="Ville de signature de la convention" %}
+                            {% include "common/form/input_text.html" with form_input=form.username label="Nom d'utilisateur" editable=False %}
+                            {% include "common/form/input_text.html" with form_input=form.first_name label="Prénom" %}
+                            {% include "common/form/input_text.html" with form_input=form.last_name label="Nom" %}
+                            {% include "common/form/input_text.html" with form_input=form.email label="Email" %}
 
                             <button class="fr-btn fr-fi-save-line fr-btn--icon-left" type="submit">
                                 Enregistrer
