--- a/templates/settings/users.html
+++ b/templates/settings/users.html
@@ -30,6 +30,7 @@
                                     <th scope="col">
                                         email
                                     </th>
+                                    <th scope="col"></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -39,6 +40,11 @@
                                         <td>{{ user.first_name}}</td>
                                         <td>{{ user.last_name}}</td>
                                         <td>{{ user.email}}</td>
+                                        <td>
+                                            <a class="fr-link fr-mb-1w" href="{% url 'settings:edit_user' username=user.username %}" >
+                                                <span class="fr-fi-edit-line" aria-hidden="true"></span>
+                                            </a>
+                                        </td>
                                     </tr>
                                 {% endfor %}
                             </tbody>
