--- a/templates/settings/administrations.html
+++ b/templates/settings/administrations.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block page_title %}Mon Profile - APiLos{% endblock%}
+{% block page_title %}Administration{% if administrations.paginator.count > 1 %}s{% endif %} - APiLos{% endblock%}
 
 {% block content %}
     <div class="fr-container-fluid">
