bootstrap dropdown menu

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -312,3 +312,11 @@ table.fullwidth {
   align-items: top;
   justify-content: left;
 }
+
+.apilos-dropdown-menu a {
+  float: none;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
