--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -20,11 +20,15 @@
         <link rel="shortcut icon" href="{% static "dsfr/dist/favicon/favicon.ico" %}" type="image/x-icon"><!-- 32×32 -->
         <link rel="manifest" href="{% static "dsfr/dist/favicon/manifest.webmanifest" %}" crossorigin="use-credentials">
 
+        <!--Using Bootstrap for any simple element which are not available in DSFR-->
+        <!--Bootstrap-->
+
+        <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}">
+
         <!--Css-->
 
         <link rel="stylesheet" href="{% static "dsfr/dist/dsfr/dsfr.min.css" %}">
         <link rel="stylesheet" href="{% static "css/main.css" %}">
-        <link rel="stylesheet" href="{% static "css/dropdown-menu.css" %}">
         <link rel="stylesheet" href="{% static "css/step_progressbar.css" %}">
         <link rel="stylesheet" href="{% static "css/user_feedback.css" %}">
         {% block css_extras %}{% endblock %}
@@ -61,13 +65,6 @@
         {% block footer %}
             {% include "layout/footer.html" %}
         {% endblock %}
-        {% include "common/matomo.html" %}
-        {% include "common/sentry.html" %}
-        {% block js %}
-            <script type="module" src="{% static "dsfr/dist/dsfr/dsfr.module.min.js" %}" nonce="{{request.csp_nonce}}"></script>
-            <script type="text/javascript" nomodule src="{% static "dsfr/dist/dsfr/dsfr.nomodule.min.js" %}" nonce="{{request.csp_nonce}}"></script>
-            <script type="text/javascript" src="{% static "js/main.js" %}" nonce="{{request.csp_nonce}}"></script>
-        {% endblock %}
 
         {% block feedback %}
             <div class="container__feedback_btn">
@@ -86,5 +83,9 @@
             </script>
         {% endblock %}
 
+        {% include "layout/matomo.html" %}
+        {% include "layout/sentry.html" %}
+        {% include "layout/javascript_load.html" %}
+        {% block js %}{% endblock %}
     </body>
 </html>
