--- a/templates/settings/edit_user.html
+++ b/templates/settings/edit_user.html
@@ -71,35 +71,9 @@
                                         </tbody>
                                     </table>
                                 </div>
-                                <button class="fr-btn fr-fi-add-circle-line fr-btn--icon-left" type="button" data-fr-opened="false" aria-controls="fr-modal-1">
-                                    Ajouter un bailleur
-                                </button>
-                                <dialog aria-labelledby="fr-modal-title-modal-1" role="dialog" id="fr-modal-1" class="fr-modal">
-                                    <div class="fr-container fr-container--fluid fr-container-md">
-                                        <div class="fr-grid-row fr-grid-row--center">
-                                            <div class="fr-col-12 fr-col-md-8 fr-col-lg-6">
-                                                <div class="fr-modal__body">
-                                                    <div class="fr-modal__header">
-                                                        <button class="fr-link--close fr-link" title="Fermer la fenêtre modale" aria-controls="fr-modal-1">Fermer</button>
-                                                    </div>
-                                                    <div class="fr-modal__content">
-                                                        <h1 id="fr-modal-title-modal-1" class="fr-modal__title">
-                                                            <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
-                                                            Ajouter un bailleur à l'utilisateur ‹‹{{ form.username.value }}››
-                                                        </h1>
-                                                        <form method="post" action="{% url 'settings:add_user_bailleur' username=form.username.value %}">
-                                                            {% csrf_token %}
-                                                            {% include "common/form/select_enum.html" with form_input=form_user_bailleur.bailleur enum=request.user.bailleurs %}
-                                                            <button class="fr-btn">
-                                                                Enregistrer
-                                                            </button>
-                                                        </form>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </dialog>
+
+                                {% include 'settings/add_bailleur.html' %}
+
                             </div>
                         {% endif %}
 
