--- a/templates/settings/edit_user.html
+++ b/templates/settings/edit_user.html
@@ -60,11 +60,7 @@
                                                     <td>{{ bailleur.siret }}</td>
                                                     <td>{{ bailleur.ville }}</td>
                                                     <td>
-                                                        {% if request.user|is_bailleur_administrator:bailleur %}
-                                                            <a class="fr-link fr-mb-1w" >
-                                                                <span class="fr-fi-delete-line" aria-hidden="true"></span>
-                                                            </a>
-                                                        {% endif %}
+                                                        {% include 'settings/remove_bailleur.html' %}
                                                     </td>
                                                 </tr>
                                             {% endfor %}
