--- a/templates/settings/edit_user.html
+++ b/templates/settings/edit_user.html
@@ -68,7 +68,7 @@
                                     </table>
                                 </div>
 
-                                {% include 'settings/add_bailleur.html' %}
+                                {% include 'settings/add_bailleur.html' with user_bailleurs=user.bailleurs%}
 
                             </div>
                         {% endif %}
@@ -104,24 +104,24 @@
                                                     <td>{{ administration.code }}</td>
                                                     <td>{{ administration.ville_signature }}</td>
                                                     <td>
-                                                        {% if request.user|is_administration_administrator:administration %}
-                                                            <a class="fr-link fr-mb-1w" >
-                                                                <span class="fr-fi-delete-line" aria-hidden="true"></span>
-                                                            </a>
-                                                        {% endif %}
+                                                        {% include 'settings/remove_administration.html' %}
                                                     </td>
                                                 </tr>
                                             {% endfor %}
                                         </tbody>
                                     </table>
                                 </div>
-                                <button class="fr-btn fr-fi-add-circle-line fr-btn--icon-left" type="button">
-                                    Ajouter un instructeur
-                                </button>
+                                {% include 'settings/add_administration.html' with user_administrations=user.administrations %}
                             </div>
                         {% endif %}
                     {% endif %}
 
+                    {% if not user.is_instructeur and not user.is_bailleur and request.user.is_superuser %}
+                        <div class="fr-mt-3w">
+                            {% include 'settings/add_administration.html' %}
+                            {% include 'settings/add_bailleur.html' %}
+                        </div>
+                    {% endif %}
 
                 </div>
             </div>
