--- a/templates/settings/users.html
+++ b/templates/settings/users.html
@@ -82,6 +82,10 @@
 
                     {% include 'common/table/pagination.html' with paginate_list=users %}
 
+                    <button class="fr-btn fr-fi-add-circle-line fr-btn--icon-left fr-mt-3w" type="button">
+                        Ajouter un utilisateur
+                    </button>
+
                 </div>
             </div>
         </div>
