--- a/templates/settings/add_administration_to_user.html
+++ b/templates/settings/add_administration_to_user.html
@@ -18,28 +18,7 @@
                             <form method="post" action="{% url 'settings:edit_user' username=form.username.value %}">
                                 {% csrf_token %}
 
-                                <div class="fr-select-group {% if form_add_administration.administration.errors %}fr-select-group--error{% endif %}">
-                                    <div class="fr-mt-1w block--row-strech" id="{{form_add_administration.administration.id_for_label}}_div">
-                                        <select
-                                            class="fr-select {% if form_add_administration.administration.errors %}fr-select--error{% endif %}"
-                                            id="{{form_add_administration.administration.id_for_label}}"
-                                            name="{{form_add_administration.administration.html_name}}">
-                                            <option value="" selected disabled hidden></option>
-                                            {% for element in request.user.administrations %}
-                                                <option value="{{element.uuid}}"
-                                                    {% if element in user_administrations %}disabled{% endif %}>
-                                                    {{element}}
-                                                </option>
-                                            {% endfor %}
-                                        </select>
-                                    </div>
-
-                                    {% for error in form_add_administration.administration.errors %}
-                                        <p id="select-error-desc-error" class="fr-error-text">
-                                            {{ error }}
-                                        </p>
-                                    {% endfor %}
-                                </div>
+                                {% include "settings/form/select_administration.html" with form_input=form_add_administration.administration %}
 
                                 <button class="fr-btn" name="action_type", value="add_administration">
                                     Enregistrer
